...
}

// MARK: - Private Methods

private extension RegistrationViewController {
    func setupViews() {
        title = "Registration"
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationItem.largeTitleDisplayMode = .always
        navigationItem.hidesBackButton = true
        view.addGestureRecognizer(UITapGestureRecognizer(target: self, action: #selector(didTapOutside)))
        nameLTF.setViewData(LabeledTextFieldViewData(label: "Name"))
        nameLTF.validators = [NameValidator()]
        pilotLicenseLTF.setViewData(LabeledTextFieldViewData(label: "License type", type: .picker(elements: [], default: "Choose one", associatedVc: self)))
        passwordLTF.setViewData(LabeledTextFieldViewData(label: "Password", isSecureEntry: true))
        passwordLTF.validators = [LengthValidator(length: 12),
                                  CharacterValidator(characterSet: .lowercaseLetters),
                                  CharacterValidator(characterSet: .uppercaseLetters),
...
